# obs-showdraw

./: .aiexclude  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  GEMINI.md  README.md  buildspec.json  vcpkg-configuration.json  vcpkg.json
.github/scripts/: install-vcpkg-macos.bash
.github/workflows/: astro.yml  build-project.yaml  my-testing.yaml  pr-pull.yaml  push-testing.yaml  push.yaml  showdraw-hlsl.yaml  showdraw-testing.yaml
build-aux/: .run-format.zsh
cmake/macos/: defaults.cmake  xcode.cmake
data/effects/: drawing-emphasizer.effect  drawing-pixelshaders.effect  drawing-test.effect  drawing.effect  drawing.hlsl  luminance-extraction.effect  main.effect
data/locale/: en-US.ini  ja-JP.ini
docs/: package-lock.json  package.json
docs/src/layouts/: Layout.astro  MarkdownLayout.astro
docs/src/lib/: github.ts
docs/src/pages/: 404.astro  index.astro
docs/src/pages/metadata/: latest-release.json.ts  latest-version.txt.ts
docs/src/pages/plugin-descripotion/: en.md  index.astro  ja.md
docs/src/pages/plugin-description/: en.md  ja.md
scripts/: compile-hlsl.bash  install-vcpkg-macos.bash  run-gtest-with-retry.bash
src/: AsyncTextureReader.hpp  BufferedTexture.cpp  BufferedTexture.hpp  CprUtils.hpp  DrawingEffect.cpp  DrawingEffect.hpp  Preset.cpp  Preset.hpp  PresetWindow.cpp  PresetWindow.hpp  ShowDrawFilterContext.cpp  ShowDrawFilterContext.h  ShowDrawFilterContext.hpp  TaskQueue.hpp  UpdateChecker.cpp  UpdateChecker.hpp  bridge.hpp  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h  settings.hpp  showdraw-conf.hpp  showdraw-global-state.hpp  showdraw-preset.hpp
src/Bridge/: ShowDrawCanvasDetectorBridge.hpp  ShowDrawCanvasDetectorBridge.mm
src/BridgeUtils/: AsyncTextureReader.hpp  GsUnique.hpp  ILogger.hpp  ObsLogger.hpp  ObsUnique.hpp  ThrottledTaskQueue.hpp
src/CanvasDetector/ShowDrawCanvasDetector.mlpackage/: Manifest.json
src/CanvasDetector/ShowDrawCanvasDetector.mlpackage/Data/com.apple.CoreML/: model.mlmodel
src/Core/: MainEffect.hpp  MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  Preset.hpp  RenderingContext.cpp  RenderingContext.hpp
src/CoreMLShowDrawCanvasDetector/: ShowDrawCanvasDetectorBridge.hpp  ShowDrawCanvasDetectorBridge.mm
src/obs-bridge-utils/: gs_unique.hpp  obs-bridge-utils.hpp  obs_log_ostream.hpp  unique_bfree.hpp  unique_gs_effect.hpp  unique_obs_data.hpp  unique_obs_data_array.hpp
tests/: AsyncTextureReader_test.cpp  BufferedTexture_test.cpp  CMakeLists.txt  DrawingEffect_shader_test.cpp  Preset_test.cpp  ShowDrawCanvasDetector_test.mm  ShowDrawFilterContext_test.cpp  UpdateChecker_test.cpp  obs_test_environment.cpp  obs_test_environment.hpp  test_mock.cpp  test_preset.cpp
tests/shader/: CMakeLists.txt  CMakePresets.json  DrawingEffect_shader_test.cpp
vcpkg-overlay-ports/cpr/: portfile.cmake  vcpkg.json
vcpkg-overlay-ports/wolfssl/: portfile.cmake  vcpkg.json
vcpkg-scripts/: install-macos.bash
vcpkg-triplets/: arm64-osx-obs.cmake  universal-osx.cmake  x64-osx-obs.cmake
